Fixed plugin render warning to overlap

--- a/packages/perspective-viewer/src/less/default.less
+++ b/packages/perspective-viewer/src/less/default.less
@@ -308,6 +308,7 @@
     .plugin_information {
         color: var(--warning--color, inherit);
         display: flex;
+        position: absolute;
         flex-direction: row;
         justify-content: flex-start;
         padding: 0.5rem;
